[gd_scene load_steps=2 format=3 uid="uid://cltrrgohuo2h8"]

[ext_resource type="Script" path="res://player_select_1p.gd" id="1_sqe2j"]

[node name="player_select_1p" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqe2j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "character 2
"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "character 1"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ready
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
